<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbarLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imageLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/expandedImage"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/weather_background"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/currentWeatherCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/expandedImage">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/currentWeatherLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/timeTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@string/date"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            android:textStyle="italic"
                            app:layout_constraintBottom_toBottomOf="@+id/currentWeatherLayout"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/dateTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@string/scotland"
                            android:textColor="@color/colorBlack"
                            android:textSize="24sp"
                            android:textStyle="italic"
                            app:layout_constraintBottom_toTopOf="@+id/timeTV"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/weatherConditionTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/weather_condition"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="italic"
                            app:layout_constraintBottom_toBottomOf="@+id/currentWeatherLayout"
                            app:layout_constraintEnd_toEndOf="parent" />

                        <TextView
                            android:id="@+id/tempTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/temperature"
                            android:textColor="@color/colorBlack"
                            android:textSize="24sp"
                            android:textStyle="italic"
                            app:layout_constraintBottom_toTopOf="@+id/weatherConditionTV"
                            app:layout_constraintEnd_toEndOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp">

                    <EditText
                        android:id="@+id/locationET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp"
                        android:background="@null"
                        android:drawableLeft="@drawable/ic_search_black_24dp"
                        android:drawablePadding="8dp"
                        android:hint="@string/search_for_location"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@color/bs_great_dark_blue"
                        android:textColorHint="@color/gray"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>


